<resources>
    <string name="app_name">Home Mortgage App</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Home Mortgage Financing</string>
    <string name="txtDescription">Home Mortgage Financing</string>
    <string name="hint1">Number of Years</string>
    <string name="hint2">Loan Amount</string>
    <string name="hint3">Interest Rate</string>
    <string name="btnPayment">Mortgage Payment</string>
</resources>
